@@ -154,7 +154,8 @@ dillo-fltk2
 +- Added int32_t, EAI_NODATA and iconv tests for FreeBSD.
    Patch: Thomas-Martin Seck
 +- Made CTRL-l focus the location bar instead of popping up a dialog.
- - Set key bindings to its modifiers when alone only.
+ - Set key bindings with modifiers to work when alone only.
+ - Replaced the findtext dialog with an in-window widget!
    Patches: Justus Winter
 
  TODO:
